@@ -1,3 +1,11 @@
+* Introduced the Env.Parser Applicative instance built atop the
+  previous Monad interface.
+* Reimplemented the Example.hs module using the Applicative instance
+* Reimplemented the test cases using the Applicative instance
+* Got rid of LANG GeneralizedNewtypeDeriving. We're not using it anymore.
+
+---
+
 * Changed the signature of Env.Parser to return a list of missing values
 * Added a specification that the parser should return all of the missing values
   not just the first one. This spec fails, however.
